Revision history for WWW::Scripter

0.029  13 May, 2012
     • The  WWW::Mechanize  link methods now  include  meta,
       link and (i)frame elements, just like WWW::Mechanize
       [rt.cpan.org #76984].
     • WWW::Mechanize-style link objects for area elements now return
       undef for the text  method,  rather than the empty string,  to
       conform to WWW::Mechanize.

0.028  April Fools’ Day, 2012
       New fetch_images and image_handler  features,  as suggested by
       John Hulala [rt.cpan.org #75696].

0.027  18 March, 2012
     • The navigator object now has a cookieEnabled property.  Thanks
       to John Hulala for the suggestion.  (I wasn’t aware that brows-
       ers had this.)
     • Requests for scripts now use the  right  referrer  instead  of
       always  about:blank.  Thanks to John  Hulala  for  the  report
       [rt.cpan.org #75696].

0.026  11 March, 2012
       The history property is now listed in %WindowInterface,  allow-
       ing scripts to access it.  Thanks to John Hulala for reporting
       the issue.

0.025  1 January, 2012
     • The get, head, post, put and request methods now alias $_ to a
       new scalar to protect a tied  $_  belonging to the caller from
       modification by other modules WWW::Scripter depends on.
     • The status and defaultStatus methods have been removed. status
       conflicts with a WWW::Mechanize method. defaultStatus makes no
       sense without status.  These were added for completeness’ sake,
       for scripts to access,  but no scripts really  use  these  any
       more.  This removal might be temporary if I think of a way  to
       reintroduce them without conflicts.
     • A memory leak in the  ->frames  method has been fixed.  It was
       creating circular references that kept the window and document
       objects alive.

0.024  20 November, 2011
     • Link-fetching methods,  like find_all_links,  no longer die if